# jam

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
src/: config.rs  lib.rs  main.rs  spritegen.rs
src/cli/: mod.rs
src/cli/commands/: generate.rs  mod.rs
src/codegen/: mod.rs
src/outputs/: dir.rs  mod.rs
src/outputs/codegen/: json.rs  luau.rs  mod.rs  toml.rs  typescript.rs  typescript_declarations.rs  yaml.rs
src/sources/: fluent.rs  font_awesome.rs  luicide.rs  material_symbols.rs  mod.rs  path.rs
src/spritegen/: mod.rs
src/util/: casings.rs  mod.rs
