[package]
name = "springroll"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
inquire = "0.7.5"
toml_edit = "0.23.2"
fs-err = { version = "3.1.1", features = ["tokio"] }
reqwest = "0.12.22"
http-cache-reqwest = "0.16.0"
reqwest-middleware = "0.4.2"
resvg = "0.45.1"
image = "0.25.6"
tiny-skia = "0.11.4"
usvg = "0.45.1"
libm = "0.2.15"
rand = "0.9.2"
lazy_static = "1.5.0"
itertools = "0.14.0"
pastey = "0.1.0"
regex = "1.11.1"

[features]
indev = []
